--- a/app/src/main/res/layout/fragment_recipe_api_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_api_detail.xml
@@ -1,101 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="RecipeDetailApiFragment"
+    tools:context=".RecipeDetailApiFragment"
     android:tag="tagDetailFragment">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
 
-        <androidx.cardview.widget.CardView
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/detail_api_image"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/r" />
+
+            <TextView
+                android:id="@+id/detail_api_name"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_alignStart="@+id/detail_api_image"
+                android:layout_alignBottom="@+id/detail_api_image"
+                android:layout_marginStart="10sp"
+                android:layout_marginBottom="40dp"
+                android:gravity="bottom"
+                android:text="Name Recipe"
+                android:textColor="@color/white"
+                android:shadowColor="@color/black"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="3"
+                android:textStyle="bold"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/detail_api_category"
+                android:layout_width="200dp"
+                android:layout_height="35dp"
+                android:layout_alignStart="@+id/detail_api_image"
+                android:layout_alignBottom="@+id/detail_api_image"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="5dp"
+                android:gravity="top"
+                android:text="Category:"
+                android:textColor="@color/white"
+                android:shadowColor="@color/black"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="3"
+                android:textStyle="normal"
+                android:textSize="25sp" />
+        </RelativeLayout>
+
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="100dp"
-            app:cardCornerRadius="30dp"
-            app:cardElevation="20dp">
+            android:layout_margin="5dp">
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@color/white"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/detail_api_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-
-                    android:scaleType="matrix" />
+                android:orientation="vertical"
+                android:padding="5dp">
 
                 <TextView
-                    android:layout_width="250dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:text="Ingredients"
+                    android:textSize="21sp"
                     android:textStyle="bold"
-                    android:textSize="30dp"
-                    android:text="Name Recipe"
-                    android:id="@+id/detail_api_name" />
+                    android:textColor="@color/black" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/dividerColor" />
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/detail_api_ingredients"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:textStyle="bold"
-                    android:textSize="25dp"
-                    android:text="Category:"
-                    android:layout_marginTop="10dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:textSize="20dp"
-                    android:text=""
-                    android:id="@+id/detail_api_category" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:textStyle="bold"
-                    android:textSize="25dp"
-                    android:text="Ingredients:"
-                    android:layout_marginTop="10dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:textSize="20dp"
-                    android:text=""
-                    android:id="@+id/detail_api_ingredients" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="Instructions"
-                    android:textSize="25dp"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="50dp"
-                    android:textSize="20dp"
-                    android:text=""
-                    android:id="@+id/detail_api_instructions" />
-
+                    android:text="@string/ingredients"
+                    android:textSize="20sp"
+                    android:textStyle="normal"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </ScrollView>
-</RelativeLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Instructions"
+                    android:textSize="21sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/dividerColor" />
+
+                <TextView
+                    android:id="@+id/detail_api_instructions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/instructions"
+                    android:textSize="20sp"
+                    android:textStyle="normal"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="10dp" />
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
+</ScrollView>
