--- a/app/src/main/res/layout/fragment_home_api_objects.xml
+++ b/app/src/main/res/layout/fragment_home_api_objects.xml
@@ -95,5 +95,12 @@
         android:layout_marginTop="10dp"
         android:layout_below="@id/searchApi"/>
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/loading_progress_api"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_centerInParent="true"/>
+
 </RelativeLayout>
 
