--- a/app/src/main/res/layout/fragment_category_recipes.xml
+++ b/app/src/main/res/layout/fragment_category_recipes.xml
@@ -1,28 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".CategoryRecipesFragment">
 
-    <LinearLayout
+    <View
         android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="85dp"
+        android:background="#BF150E0E" />
+
+    <RelativeLayout
+        android:id="@+id/titleBar"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@color/pageColor">
+
+        <ImageView
+            android:id="@+id/titleImage"
+            android:layout_width="80dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="0dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/winning_recipe_logo" />
 
         <TextView
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:id="@+id/category"
-            android:layout_marginStart="10dp"
-            android:text="category_1"
+            android:id="@+id/titleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="Winning Recipe"
+            android:textColor="#BF150E0E"
             android:textSize="30sp"
-            android:textStyle="italic"/>
+            android:textStyle="bold"
+            android:layout_marginStart="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="0dp"
+        />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/category_recyclerView" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/userEmailTextView"
+        android:layout_width="match_parent"
+        android:layout_height="17dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="89dp"
+        android:text="User "
+        android:textSize="13sp"
+        android:textStyle="italic"
+        android:drawableLeft="@drawable/baseline_person_24"
+        android:drawablePadding="0dp"/>
 
-</FrameLayout>
+    <androidx.appcompat.widget.SearchView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="109dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:id="@+id/search"
+        app:iconifiedByDefault="false"
+        app:searchHintIcon="@null"
+        app:queryHint="Search..."
+        android:focusable="false"
+        android:background="@drawable/app_border"
+        app:closeIcon="@drawable/baseline_clear_24"
+        app:searchIcon="@drawable/baseline_search_24"/>
+
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/loading_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_centerInParent="true"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/category"
+        android:layout_marginTop="160dp"
+        android:layout_marginStart="10dp"
+        android:text="category_1"
+        android:textSize="30sp"
+        android:textStyle="italic"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:layout_marginTop="60dp"
+        android:layout_below="@id/search"/>
+
+</RelativeLayout>
