--- a/app/src/main/res/layout/fragment_home_api_objects.xml
+++ b/app/src/main/res/layout/fragment_home_api_objects.xml
@@ -78,7 +78,7 @@
         android:layout_marginTop="109dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:id="@+id/searchApi"
+        android:id="@+id/search"
         app:iconifiedByDefault="false"
         app:searchHintIcon="@null"
         app:queryHint="Search..."
@@ -88,15 +88,15 @@
         app:searchIcon="@drawable/baseline_search_24"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewApi"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/searchApi"/>
+        android:layout_below="@id/search"/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:id="@+id/loading_progress_api"
+        android:id="@+id/loading_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="true"
