--- a/app/src/main/res/layout/fragment_update_recipe.xml
+++ b/app/src/main/res/layout/fragment_update_recipe.xml
@@ -5,34 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:background="@drawable/pagebkg_login_signup"
+	android:background="@drawable/add_recipe_image"
 	tools:context=".UpdateRecipe"
     android:name="androidx.navigation.fragment.NavHostFragment"
     app:navGraph="@navigation/nav">
 
 
-    <LinearLayout
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="80dp"
+	<LinearLayout
+		android:layout_width="400dp"
+		android:layout_height="wrap_content"
 		android:gravity="center"
-        android:orientation="vertical">
+		android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-			android:layout_marginTop="75dp"
-			android:gravity="center"
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="10dp"
 			android:layout_marginRight="8dp"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:textColor="@color/appColor"
-			android:text="Update Recipe"/>
+			android:gravity="center"
+			android:text="Update Recipe"
+			android:textColor="@color/appColor"
+			android:textSize="30sp"
+			android:textStyle="bold" />
+
+		<View
+			android:layout_width="wrap_content"
+			android:layout_height="16dp" />
 
 		<ImageView
 			android:id="@+id/upload_image"
-			android:layout_width="51dp"
-			android:layout_height="43dp"
+			android:layout_width="232dp"
+			android:layout_height="147dp"
 			android:layout_gravity="center"
 			android:layout_marginTop="7dp"
 			android:layout_marginRight="10dp"
@@ -42,6 +45,10 @@
 			android:scaleType="fitCenter"
 			android:src="@drawable/add_image" />
 
+		<View
+			android:layout_width="wrap_content"
+			android:layout_height="16dp" />
+
 		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/textInputLayoutName"
 			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -50,24 +57,28 @@
 			android:layout_marginStart="40dp"
 			android:layout_marginTop="8dp"
 			android:layout_marginEnd="10dp"
+			android:gravity="start|center_vertical"
 			android:hint="Recipe Name"
 			android:textColor="@color/appColor"
 			android:textColorHint="@color/appColor"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintHorizontal_bias="0.5"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/textView"
-			android:gravity="start|center_vertical">
+			app:layout_constraintTop_toBottomOf="@+id/textView">
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_name"
 				android:layout_width="220dp"
 				android:layout_height="50dp"
-				android:paddingStart="30dp"
 				android:inputType="text"
+				android:paddingStart="30dp"
 				android:textColor="@color/appColor" />
 
 		</com.google.android.material.textfield.TextInputLayout>
+
+		<View
+			android:layout_width="wrap_content"
+			android:layout_height="2dp" />
 
 		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/textInputLayoutIngredients"
@@ -77,25 +88,28 @@
 			android:layout_marginStart="40dp"
 			android:layout_marginTop="5dp"
 			android:layout_marginEnd="10dp"
+			android:gravity="start|center_vertical"
 			android:hint="Recipe Ingredients"
-			android:textColorHint="@color/appColor"
 			android:textColor="@color/appColor"
+			android:textColorHint="@color/appColor"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintHorizontal_bias="0.5"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/textView"
-			android:gravity="start|center_vertical">
+			app:layout_constraintTop_toBottomOf="@+id/textView">
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_ingredients"
 				android:layout_width="220dp"
 				android:layout_height="50dp"
-				android:paddingStart="30dp"
 				android:inputType="text"
+				android:paddingStart="30dp"
 				android:textColor="@color/appColor" />
 
 		</com.google.android.material.textfield.TextInputLayout>
 
+		<View
+			android:layout_width="wrap_content"
+			android:layout_height="2dp" />
 
 		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/textInputLayoutCategory"
@@ -105,26 +119,30 @@
 			android:layout_marginStart="40dp"
 			android:layout_marginTop="5dp"
 			android:layout_marginEnd="10dp"
+			android:gravity="start|center_vertical"
 			android:hint="Recipe Category"
-			android:textColorHint="@color/appColor"
 			android:textColor="@color/appColor"
+			android:textColorHint="@color/appColor"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintHorizontal_bias="0.5"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/textView"
-			android:gravity="start|center_vertical">
+			app:layout_constraintTop_toBottomOf="@+id/textView">
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_category"
 				android:layout_width="220dp"
 				android:layout_height="50dp"
-				android:paddingStart="30dp"
 				android:inputType="text"
+				android:paddingStart="30dp"
 				android:textColor="@color/appColor" />
 
 		</com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
+		<View
+			android:layout_width="wrap_content"
+			android:layout_height="2dp" />
+
+		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/textInputLayoutTime"
 			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
 			android:layout_width="300dp"
@@ -132,24 +150,28 @@
 			android:layout_marginStart="40dp"
 			android:layout_marginTop="5dp"
 			android:layout_marginEnd="10dp"
+			android:gravity="start|center_vertical"
 			android:hint="Preparation time"
-			android:textColorHint="@color/appColor"
 			android:textColor="@color/appColor"
+			android:textColorHint="@color/appColor"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintHorizontal_bias="0.5"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/textView"
-			android:gravity="start|center_vertical">
+			app:layout_constraintTop_toBottomOf="@+id/textView">
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_time"
 				android:layout_width="220dp"
 				android:layout_height="50dp"
-				android:paddingStart="30dp"
 				android:inputType="time"
+				android:paddingStart="30dp"
 				android:textColor="@color/appColor" />
 
 		</com.google.android.material.textfield.TextInputLayout>
+
+		<View
+			android:layout_width="wrap_content"
+			android:layout_height="2dp" />
 
 		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/textInputLayoutDescription"
@@ -159,35 +181,43 @@
 			android:layout_marginStart="40dp"
 			android:layout_marginTop="5dp"
 			android:layout_marginEnd="10dp"
+			android:gravity="start|center_vertical"
 			android:hint="Recipe Instructions"
-			android:textColorHint="@color/appColor"
 			android:textColor="@color/appColor"
+			android:textColorHint="@color/appColor"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintHorizontal_bias="0.5"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/textView"
-			android:gravity="start|center_vertical">
+			app:layout_constraintTop_toBottomOf="@+id/textView">
 
 			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/upload_description"
 				android:layout_width="220dp"
-				android:layout_height="50dp"
+				android:layout_height="160dp"
+				android:fadeScrollbars="false"
+				android:gravity="start|top"
+				android:inputType="textMultiLine"
+				android:lines="5"
 				android:paddingStart="30dp"
 				android:textColor="@color/appColor" />
 
 		</com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/updateRecipeToFirebase"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+		<View
+			android:layout_width="wrap_content"
+			android:layout_height="1dp" />
+
+		<Button
+			android:id="@+id/updateRecipeToFirebase"
+			android:layout_width="150dp"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="10dp"
 			android:layout_marginRight="5dp"
 			android:layout_marginBottom="30dp"
-            android:text="UPDATE"
-            android:textSize="20dp"/>
+			android:text="UPDATE"
+			android:textSize="20dp" />
 
-    </LinearLayout>
+	</LinearLayout>
 
 
 </ScrollView>
