--- a/app/src/main/res/layout/fragment_category_recipes.xml
+++ b/app/src/main/res/layout/fragment_category_recipes.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".CategoryRecipesFragment">
+    tools:context=".CategoryRecipesFragment"
+    android:background="@color/pageColor">
 
     <View
         android:layout_width="match_parent"
@@ -15,66 +16,59 @@
     <RelativeLayout
         android:id="@+id/titleBar"
         android:layout_width="match_parent"
+        android:layout_height="75dp"
         android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
         android:background="@color/pageColor">
 
         <ImageView
             android:id="@+id/titleImage"
             android:layout_width="80dp"
             android:layout_height="75dp"
-            android:layout_marginStart="0dp"
             android:layout_centerVertical="true"
+            android:layout_marginStart="0dp"
             android:src="@drawable/winning_recipe_logo" />
 
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="15dp"
             android:text="Winning Recipe"
             android:textColor="#BF150E0E"
             android:textSize="30sp"
             android:textStyle="bold"
-            android:layout_marginStart="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="0dp"
-        />
 
-    <TextView
-        android:id="@+id/userEmailTextView"
-        android:layout_width="match_parent"
-        android:layout_height="17dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="89dp"
-        android:text="User "
-        android:textSize="13sp"
-        android:textStyle="italic"
-        android:drawableLeft="@drawable/baseline_person_24"
-        android:drawablePadding="0dp"/>
+        <TextView
+            android:id="@+id/userEmailTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="17dp"
+            android:layout_below="@+id/titleTextView"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="-3dp"
+            android:drawableLeft="@drawable/baseline_person_24"
+            android:drawablePadding="4dp"
+            android:text="User "
+            android:textSize="13sp"
+            android:textStyle="italic" />
+    </RelativeLayout>
 
     <androidx.appcompat.widget.SearchView
+        android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="109dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="12dp"
-        android:id="@+id/search"
-        app:iconifiedByDefault="false"
-        app:searchHintIcon="@null"
-        app:queryHint="Search..."
         android:focusable="false"
-        android:background="@drawable/app_border"
         app:closeIcon="@drawable/baseline_clear_24"
-        app:searchIcon="@drawable/baseline_search_24"/>
-
+        app:iconifiedByDefault="false"
+        app:queryHint="Search..."
+        app:searchHintIcon="@null"
+        app:searchIcon="@drawable/baseline_search_24" />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/loading_progress"
@@ -83,16 +77,16 @@
         android:indeterminate="true"
         android:layout_centerInParent="true"/>
 
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/category"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="10dp"
         android:text="category_1"
         android:textSize="30sp"
-        android:textStyle="italic"/>
+        android:textStyle="italic"
+        android:layout_below="@id/search"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
