--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,65 +17,59 @@
     <RelativeLayout
         android:id="@+id/titleBar"
         android:layout_width="match_parent"
+        android:layout_height="75dp"
         android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
         android:background="@color/pageColor">
 
         <ImageView
             android:id="@+id/titleImage"
             android:layout_width="80dp"
             android:layout_height="75dp"
-            android:layout_marginStart="0dp"
             android:layout_centerVertical="true"
+            android:layout_marginStart="0dp"
             android:src="@drawable/winning_recipe_logo" />
 
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Winning Recipe"
-        android:textColor="#BF150E0E"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:layout_marginStart="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="15dp"
+            android:text="Winning Recipe"
+            android:textColor="#BF150E0E"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="0dp"
-        />
-
-    <TextView
-        android:id="@+id/userEmailTextView"
-        android:layout_width="match_parent"
-        android:layout_height="17dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="89dp"
-        android:text="User "
-        android:textSize="13sp"
-        android:textStyle="italic"
-        android:drawableLeft="@drawable/baseline_person_24"
-        android:drawablePadding="0dp"/>
+        <TextView
+            android:id="@+id/userEmailTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="17dp"
+            android:layout_below="@+id/titleTextView"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="-3dp"
+            android:drawableLeft="@drawable/baseline_person_24"
+            android:drawablePadding="4dp"
+            android:text="User "
+            android:textSize="13sp"
+            android:textStyle="italic" />
+    </RelativeLayout>
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="109dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="12dp"
-        android:background="@drawable/app_border"
         android:focusable="false"
         app:closeIcon="@drawable/baseline_clear_24"
         app:iconifiedByDefault="false"
         app:queryHint="Search..."
         app:searchHintIcon="@null"
-        app:searchIcon="@drawable/baseline_search_24" />
+        app:searchIcon="@drawable/baseline_search_24"/>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/loading_progress"
@@ -118,6 +112,7 @@
                     android:id="@+id/category_1_recyclerView"
                     android:orientation="horizontal"/>
             </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/start_category_2"
