--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="appColor">#8692f7</color>
+    <color name="appColor">#000000</color>
     <color name="pageColor">#f2f2f2</color>
     <color name="dividerColor">#FFCCCCCC</color>
     <color name="favoriteButtonBorder">#9AFFFFFF</color>
