--- a/app/src/main/res/layout/fragment_category_recipes.xml
+++ b/app/src/main/res/layout/fragment_category_recipes.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginTop="85dp"
-        android:background="#BF150E0E" />
+        android:background="@color/appColor" />
 
     <RelativeLayout
         android:id="@+id/titleBar"
@@ -35,7 +35,7 @@
             android:layout_marginStart="100dp"
             android:layout_marginTop="15dp"
             android:text="Winning Recipe"
-            android:textColor="#BF150E0E"
+            android:textColor="@color/appColor"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -75,7 +75,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        app:indicatorColor="@color/appColor"/>
 
     <TextView
         android:layout_width="wrap_content"
